--- a/articles/2012-05-07-iFM/2012-05-07-iFM-HYMITATOR.tex
+++ b/articles/2012-05-07-iFM/2012-05-07-iFM-HYMITATOR.tex
@@ -279,7 +279,7 @@
 \newcommand{\hytech}{{\sc HyTech}}
 \newcommand{\imitator}{\textsc{Imitator}}
 % \newcommand{\imitatordeux}{\textsc{Imitator}\,II}
-\newcommand{\hymitator}{\textsc{Hymitator}}
+\newcommand{\hymitator}{HyMITATOR} % \textsc{Hymitator}
 \newcommand{\kronos}{\textsc{Kronos}}
 \newcommand{\nusmv}{NuSMV}
 \newcommand{\ocaml}{OCaml}
@@ -326,7 +326,7 @@
 
 % Title
 % \title{Efficient Analysis of Parametric Hybrid Systems with HYMITATOR}
-\title{Parametric Analysis of Hybrid Systems Using HYMITATOR}
+\title{Parametric Analysis of Hybrid Systems Using \hymitator{}}
 % \thanks{A long version of this paper is available in~\cite{AS11}, with full preliminary definitions, and all detaild algorithms and proofs.}
 \author{\'Etienne Andr\'e$^1$ and %Laurent Fribourg$^2$,
 	Ulrich K\"uhne$^2$% and Romain Soulat$^2$
