--- a/articles/2012-05-07-iFM/Poster-HYMITATOR/beamerthemeI6dv.sty
+++ b/articles/2012-05-07-iFM/Poster-HYMITATOR/beamerthemeI6dv.sty
@@ -88,13 +88,18 @@
     \begin{columns}[T]
 
 	\begin{column}{.25\paperwidth}
-        \vskip1cm
+        \vskip0.5cm
 	
         \begin{center}
-			(toum)(toum)(toum)
-          \includegraphics[width=.30\linewidth]{lsv-white.png}\ \ \ \ \ 
-%           \includegraphics[width=.30\linewidth]{lip6.png}\ \ \ \ \ 
-%           \includegraphics[width=.30\linewidth]{logoST.jpg}
+% 			\includegraphics[width=.30\linewidth]{lsv-white.png}
+% 			
+% 			\medskip
+% 			
+% 			\includegraphics[width=.80\linewidth]{logo_4c}
+% 			
+% 			\medskip
+% 			
+%           \includegraphics[width=.70\linewidth]{logoP13.jpg}
         \end{center}
 	
         \vskip1.5cm
@@ -103,14 +108,23 @@
 	\begin{column}{.62\paperwidth}
         \vskip4ex
         \raggedleft
-        \usebeamercolor{title in headline}{\color{fg}\textbf{\LARGE{\inserttitle}}\\[1ex]}
+        \usebeamercolor{title in headline}{\color{fg}\textbf{\LARGE{\hymitator{}}}\\[1ex]}
+        
+        \bigskip
+        
+        \usebeamercolor{title in headline}{\color{fg}\textbf{\LARGE{Parametric Analysis of Hybrid Systems}}\\[1ex]}
+        
+        \bigskip
+        
         \usebeamercolor{author in headline}{\color{fg}\large{\insertauthor}\\[1ex]}
         \usebeamercolor{institute in headline}{\color{fg}\normalsize{\insertinstitute}\\[1ex]}     
       \end{column}
 
 	\begin{column}{.10\paperwidth}
         \begin{center}
-%           \includegraphics[width=0.9\linewidth]{logo_anr_stic.png}
+			\vspace{2cm}
+%           \includegraphics[width=0.9\linewidth]{lsv-white.png}
+          \includegraphics[width=0.9\linewidth]{imitator.png}
         \end{center}
 	\end{column}
 
@@ -128,10 +142,16 @@
     \rule{0pt}{2pt}
   \end{beamercolorbox}
   
-  \begin{beamercolorbox}[ht=4ex,leftskip=1cm,rightskip=1cm]{footline}%
-    HYMITATOR \ \ -- \ \ Contact: Ulrich K\"uhne \hfill \url{www.lsv.ens-cachan.fr/Software/hymitator/}
+  \begin{beamercolorbox}[ht=8ex,leftskip=1cm,rightskip=1cm]{footline}%
+          \includegraphics[height=5ex]{lsv-white.png}
+          \hspace{2cm}
+          \includegraphics[height=5ex]{logo_4c}
+          \hspace{2cm}
+          \includegraphics[height=5ex]{logoP13.png}
+%           HYMITATOR \ \ -- \ \ Contact: Ulrich K\"uhne 
+          \hfill \url{www.lsv.ens-cachan.fr/Software/hymitator/}
     \vskip1ex
-  \end{beamercolorbox}
+  \end{beamercolorbox}  
 
   \begin{beamercolorbox}[wd=\paperwidth]{lower separation line foot}
     \rule{0pt}{2pt}
