--- a/articles/2012-05-07-iFM/biblioFM.bib
+++ b/articles/2012-05-07-iFM/biblioFM.bib
@@ -186,7 +186,17 @@
   	booktitle =	{{P}roceedings of the 12th {I}nternational {W}orkshop on {V}erification of {I}nfinite {S}tate {S}ystems ({INFINITY}'10)},
   	address =	{Singapore},
 
-  	
+  
+@inproceedings{AK12,
+  	author =	{Andr{\'e}, {\'E}tienne and K\"uhne, Ulrich},
+  	booktitle =	{{iFM}'12},
+  	note =	{To appear.},
+  	title =	{Parametric Analysis of Hybrid Systems Using {HyMITATOR}},
+  	year =	{2012},
+}
+
+
+
 @inproceedings{AS11,
   	author =	{Andr{\'e}, {\'E}. and Soulat, R.},
   	booktitle =	{{RP}'11},
@@ -1693,6 +1703,15 @@ Proceedings of the 9th International Conference on Concurrency Theory
    year = {1985}
 }
 
+
+
+@INPROCEEDINGS{HPR97,
+    author = {N. Halbwachs and Y.-E. Proy and P. Roumanoff},
+    title = {Verification of Real-Time Systems using Linear Relation Analysis},
+    booktitle = {Formal Methods In System Design},
+    year = {1997},
+    pages = {157--185}
+}
 
 
 @article{hsny94,
