amelioration poster, suite, suite
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@520 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/articles/2012-05-07-iFM/Poster-HYMITATOR/2012-05-HYMITATOR.tex
+++ b/articles/2012-05-07-iFM/Poster-HYMITATOR/2012-05-HYMITATOR.tex
@@ -445,7 +445,9 @@
       \param{M} and \param{delay}, such that always $\param{min} < \vari{w} < \param{max}$?
   \end{itemize}
 
-Synthesis problem: \couleur{find values for the timing parameters such that the system behaves well}.
+  \vspace{1cm}
+  
+Synthesis problem: ``\couleur{find values for the timing parameters such that the system behaves well}''.
 
 \end{block}
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
